--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -13,7 +13,4 @@ nav:
   - Home: index.md
   - Posts:
     # - The Accounting IS the Problem: accounting-is-the-problem.md
-    - Calculate Option: posts/calculate_option/index.md
-    - Calculate Option: posts/calculate_option/index.md
-    - Calculate Option: posts/calculate_option/index.md
-    - Calculate Option: posts/calculate_option/index.md
+    - posts/calculate_option/index.md
