--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -5,6 +5,8 @@ markdown_extensions:
   - footnotes
   - meta
   - tables
+  - pymdownx.arithmatex:
+      generic: true
 plugins:
   - search
 extra:
@@ -15,3 +17,6 @@ nav:
     # - The Accounting IS the Problem: accounting-is-the-problem.md
     - posts/measuring_learning/index.md
     - posts/calculate_option/index.md
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
