--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -15,9 +15,22 @@ docs_dir: 'content'
 nav:
   - Home: index.md
   - Posts:
-    # - The Accounting IS the Problem: accounting-is-the-problem.md
     - posts/measuring_learning/index.md
     - posts/calculate_option/index.md
+    - posts/accouting_problem/index.md
+    - posts/angels_and_options/index.md
+    - posts/diffusion_of_innovations/index.md
+    - posts/innovation_engine/index.md
+    - posts/innovation_metrics/index.md
+    - posts/laddered_innovation/index.md
+    - posts/measuring_learning/index.md
+    - posts/npv_trap/index.md
+    - posts/option_mindset/index.md
+    - posts/options_characteristics/index.md
+    - posts/options_explained/index.md
+    - posts/quest_race_grind/index.md
+    - posts/three_innovation_types/index.md
+    - posts/wom_prom_score/index.md
 extra_javascript:
   - javascripts/mathjax.js
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
