--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -14,10 +14,12 @@ extra:
 docs_dir: 'content'
 nav:
   - Home: index.md
+  - Main:
+    - pages/about.md
   - Posts:
     - posts/measuring_learning/index.md
     - posts/calculate_option/index.md
-    - posts/accouting_problem/index.md
+    - posts/accounting_problem/index.md
     - posts/angels_and_options/index.md
     - posts/diffusion_of_innovations/index.md
     - posts/innovation_engine/index.md
@@ -32,5 +34,5 @@ nav:
     - posts/three_innovation_types/index.md
     - posts/wom_prom_score/index.md
 extra_javascript:
-  - javascripts/mathjax.js
+  - javascript/mathjax.js
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
