--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -16,7 +16,7 @@ nav:
   - Home: index.md
   - Main:
     - pages/about.md
-    - pages/calculator.md
+    # - pages/calculator.md
   - Posts:
     - posts/measuring-learning/index.md
     - posts/option_mindset/index.md
@@ -35,7 +35,7 @@ nav:
     # - posts/angels_and_options/index.md
 extra_javascript:
   - javascript/mathjax.js
-  - javascript/calculator.js
+  # - javascript/calculator.js
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 extra_css:
-  - styles/calculator.css
+  # - styles/calculator.css
