--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -15,9 +15,7 @@ docs_dir: 'content'
 nav:
   - Home: index.md
   - Learn: learn.md
-  # - Main:
-  #   - pages/about.md
-    # - pages/calculator.md
+  - Calculator: calculator.md
   - Posts:
     - posts/measuring-learning/index.md
     - posts/option_mindset/index.md
@@ -36,7 +34,7 @@ nav:
     # - posts/angels_and_options/index.md
 extra_javascript:
   - javascript/mathjax.js
-  # - javascript/calculator.js
+  - javascript/calculator.js
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 extra_css:
   # - styles/calculator.css
